--- a/miniprogram/pkg_zhengzhao/pages/editphoto/index.wxss
+++ b/miniprogram/pkg_zhengzhao/pages/editphoto/index.wxss
@@ -4,8 +4,19 @@ page {
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.container-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
 }
 
 .tabs {
@@ -120,20 +131,45 @@ page {
 
 /* color picker */
 .color-picker-view {
-  position: relative;
-  margin-top: 10px;
-  width: 100%;
-  height: 0;
-  overflow: visible;
-  z-index: 99;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-container-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #787878;
+  opacity: 0.8;
+  z-index: 10;
+}
+
+.color-picker-view .loading-container-content {
+  background-color: #FFFFFF;
+  z-index: 11;
+  width: 96%;
+  height: 620rpx;
+  border-radius: 20rpx;
+  padding: 20rpx 10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .color-picker-view .color-picker-content {
-  position: absolute;
-  left: 0;
-  top: 0;
   width: 100%;
-  background-color: #fff;
+  border-radius: 20rpx;
+  text-align: center;
+  display: flex;
 }
 
 .color-picker-view .color-picker-content.hide {
@@ -141,22 +177,20 @@ page {
 }
 
 .color-picker-view .color-picker-content .tips {
-  position: absolute;
-  width: 4em;
-  right: 5px;
+  width: 100rpx;
   top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .color-picker-view .color-picker-content .current-color {
-  position: absolute;
-  width: 4em;
-  height: 4em;
-  right: 5px;
-  bottom: 80px;
+  width: 60rpx;
+  height: 60rpx;
 }
 
 .color-picker-view .color-picker-content button {
-  position: absolute;
   right: 5px;
   bottom: 30px;
 }
