--- a/miniprogram/pkg_zhengzhao/pages/preimgedit/index.wxml
+++ b/miniprogram/pkg_zhengzhao/pages/preimgedit/index.wxml
@@ -1,30 +1,16 @@
 <!--pkg_zhengzhao/pages/preimgedit/index.wxml-->
 <view class="container">
-  <view class="container-head">
-    <view class="tips-item" wx:for="{{preImgInfoList}}">
-      {{item}}
-    </view>
+  <view class="header">{{name}}</view>
+  <view class="tips">
+    <view>照片像素：{{px}}</view>
+    <view>打印尺寸：{{size}}</view>
+    <view>照片描述：{{description}}</view>
   </view>
-  <view class="container-content">
-    <view class="container-content-head">{{name}}</view>
-    <view class="container-content-dec">
-      <view class="container-content-dec-item">
-        <view style="width:40%">像素尺寸：</view>
-        <view>{{px}}</view>
-      </view>
-      <view class="container-content-dec-item">
-        <view style="width:40%">冲印尺寸：</view>
-        <view class="dec">{{size}}</view>
-      </view>
-      <view class="container-content-dec-item">
-        <view style="width:40%">分辨率：</view>
-        <view class="dec">无要求</view>
-      </view>
-      <view class="container-content-dec-item">
-        <view style="width:40%">照片描述：</view>
-        <view class="dec">{{description}}</view>
-      </view>
-    </view>
+  <view class="header">拍照秘籍</view>
+  <view class="tips">
+    <view>- 照片使用纯色背景（推荐白墙）</view>
+    <view>- 避免多人出现在照片中</view>
+    <view>- 露出耳朵、眉毛和下巴</view>
   </view>
   <view class="container-optBtn">
     <view bindtap="chooseImagePre" data-type="album" class="container-btn">相册选择</view>
