--- a/miniprogram/pkg_pexels/pages/index/index.wxss
+++ b/miniprogram/pkg_pexels/pages/index/index.wxss
@@ -1,1 +1,13 @@
 /* pkg_pexels/pages/index/index.wxss */
+.wrap {
+  margin: 0 20rpx;
+}
+
+.load-tips {
+  text-align: center;
+  line-height: 2;
+  font-size: 28rpx;
+  color: #666;
+  line-height: 1.5;
+  padding: 20rpx 0;
+}
