--- a/miniprogram/pkg_pexels/pages/index/index.wxml
+++ b/miniprogram/pkg_pexels/pages/index/index.wxml
@@ -1,8 +1,12 @@
 <!--pkg_pexels/pages/index/index.wxml-->
-<view class="wrap">
-  <waterfall id="waterfall" generic:item="waterfall-item" list="{{list || []}}" idKey="id" imageKey="imgUrl" colNum="2" gutter="5%" bind:loadingChange="onLoadingChange"></waterfall>
-  <view class="load-tips">
-    <view wx:if="{{listDataLoading || waterfallLoading}}">加载中...</view>
-    <view wx:if="{{loaded}}">加载完毕</view>
+<view class="container">
+  <!-- 搜索框 -->
+  <header class="header" bind:search="onSearchTap" content="{{keywords}}"></header>
+  <view class="waterfall">
+    <waterfall id="waterfall" generic:item="waterfall-item" list="{{list || []}}" idKey="id" imageKey="imgUrl" colNum="2" gutter="5%" bind:loadingChange="onLoadingChange" bind:itemclick="onItemClick"></waterfall>
+    <view class="load-tips">
+      <view wx:if="{{listDataLoading || waterfallLoading}}">加载中...</view>
+      <view wx:if="{{loaded}}">加载完毕</view>
+    </view>
   </view>
 </view>
