--- a/miniprogram/pkg_pexels/pages/index/index.wxss
+++ b/miniprogram/pkg_pexels/pages/index/index.wxss
@@ -1,7 +1,21 @@
 /* pkg_pexels/pages/index/index.wxss */
-.wrap {
-  margin: 0 20rpx;
+.container {
+  overflow: hidden;
 }
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 9;
+  background-color: #FFFFFF;
+}
+
+.waterfall {
+  margin: 110rpx 20rpx;
+}
+
 
 .load-tips {
   text-align: center;
