--- a/miniprogram/components/msgs/message-response/index.wxml
+++ b/miniprogram/components/msgs/message-response/index.wxml
@@ -3,7 +3,7 @@
   <message-text text="{{response.text}}"></message-text>
 </block>
 <block wx:if="{{response.type=='ChatGPTImage'}}">
-  <message-chatgpt-image images="{{response.text.data}}" type="{{response.type}}"></message-chatgpt-image>
+  <message-image images="{{response.text.data}}" type="{{response.type}}"></message-image>
 </block>
 <block wx:if="{{response.type=='replicate'}}">
   <message-replicate response="{{response}}" bind:imagestoragesync="onImageStorageSync"></message-replicate>
