--- a/miniprogram/components/tab-bar/index.wxml
+++ b/miniprogram/components/tab-bar/index.wxml
@@ -1,7 +1,7 @@
 <view class="tabBar">
   <view class="cu-bar tabbar bg-white shadow">
     <!-- AI问答 -->
-    <view class="action {{idx == 0?'text-current':'text-normal'}}" catchtap='{{idx != 0?"goToTab":""}}' data-url="/pages/chat/index" data-index="0">
+    <view wx:if="{{aishow}}" class="action {{idx == 0 ?'text-current':'text-normal'}}" catchtap='{{idx != 0?"goToTab":""}}' data-url="/pages/chat/index" data-index="0">
       <botton class='iconf icon-jiqiren bg-rr'></botton>
       AI问答
     </view>
